overflow-x on html element also to avoid overflow on mobile

--- a/web/app/themes/ilsfa/assets/styles/common/_base.scss
+++ b/web/app/themes/ilsfa/assets/styles/common/_base.scss
@@ -6,11 +6,14 @@
 html {
   box-sizing: border-box;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 
 body {
   color: $blurple-dark;
   font-size: 16px;
-  overflow-x: hidden;
   // Avoid white flash below animating .site-header
   background: darken($blurple-dark, 5%);
   font: 18px/1.333 $font-regular;
